<resources>
    <string name="app_name">Video Speed</string>
    <string name="my_video">My Videos</string>
    <string name="wait_for_processing">Waiting...</string>
    <string name="ok">Ok</string>
    <string name="notringtone">Ringtone feature is not working</string>
    <string name="ringtonesucces">Ringtone set successfully</string>
    <string name="video_to_audio">Video to Audio</string>
    <string name="my_audio">My Audio</string>
    <string name="convert_audio">Start Converter</string>
    <string name="convert">Converter Video Audio</string>
    <string name="format">Format</string>
    <string name="quality">Quality</string>
    <string name="ringtone">Ringtone</string>
    <string name="convert_to">Convert to</string>
    <string name="contentrate">Please rate 5 star for this app. Thank you for your support</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="not_now">Not now!</string>
    <string name="rate">Rate App!</string>
    <string name="run_background">Run Background</string>
    <string name="convert_complete">Convert complete</string>
    <string name="convert_in">Convert in progress</string>
    <string name="cancel">Cancel</string>
    <string name="fail">Fail</string>
    <string name="remove">Are you sure remove this video?</string>
    <string name="remove_title">Remove video?</string>
    <string name="removeed">Audio removed</string>
    <string name="trimvideo">Trim Video</string>
    <string name="edit_speed">Edit Speed</string>
    <string name="enable_audio">Enable Audio</string>
    <string name="fast_motion">Fast Motion</string>
    <string name="motion_video">Motion Video</string>
    <string name="slow_motion">Slow Motion</string>
    <string name="warning">Warning!</string>
    <string name="next">Next</string>
    <string name="fb_notavainle">Facebook not avaible</string>
    <string name="is_notavaible">Instagram not avaible</string>
    <string name="fs"><![CDATA[Fast&Slow Motion]]></string>
    <string name="finish">Finish</string>
    <string name="capture_video">Capture Video</string>
    <string name="videos">My Videos</string>
    <string name="video_motion">Video Motion</string>
</resources>
