<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/s300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_diaglog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s70dp"
            android:background="@drawable/background_diaglog_inner"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/s30dp"
                android:layout_height="@dimen/s30dp"
                android:layout_marginRight="@dimen/s20dp"
                android:src="@drawable/ic_motion" />

            <com.media.vid.video_speed.utils.TextBlod_
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/motion_video"
                android:textColor="@color/colortext"
                android:textSize="@dimen/s26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/s10dp"
            android:layout_marginBottom="@dimen/s10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s20dp"
            android:layout_marginRight="@dimen/s20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln_fast"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s16dp"
                android:layout_marginTop="@dimen/s16dp">

                <ImageView
                    android:id="@+id/iv_fast"
                    android:layout_width="@dimen/s30dp"
                    android:layout_height="@dimen/s30dp"
                    android:src="@drawable/ic_check" />

                <com.media.vid.video_speed.utils.TextRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/s16dp"
                    android:text="@string/fast_motion"
                    android:textColor="@color/backgrounddiag"
                    android:textSize="@dimen/s20sp" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center_vertical"
                android:id="@+id/ln_slow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s16dp"
                android:layout_marginTop="@dimen/s16dp">

                <ImageView
                    android:id="@+id/iv_slow"
                    android:layout_width="@dimen/s30dp"
                    android:layout_height="@dimen/s30dp"
                    android:src="@drawable/ic_uncheck" />

                <com.media.vid.video_speed.utils.TextRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/s16dp"
                    android:text="@string/slow_motion"
                    android:textColor="@color/backgrounddiag"
                    android:textSize="@dimen/s20sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/s65dp"
                android:layout_marginTop="@dimen/s10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.media.vid.video_speed.utils.TextBlod_
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/s20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="@dimen/s10dp"
                    android:paddingTop="@dimen/s10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/red"
                    android:textSize="@dimen/s22sp" />

                <com.media.vid.video_speed.utils.TextBlod_

                    android:id="@+id/tv_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/s20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="@dimen/s10dp"
                    android:paddingTop="@dimen/s10dp"
                    android:text="@string/ok"
                    android:textColor="@color/green"
                    android:textSize="@dimen/s22sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
