<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.media.vid.video_speed.activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.3"
        android:gravity="center"
        android:orientation="vertical">

        <com.media.vid.video_speed.utils.TextBlod
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Video"
            android:textColor="@color/backgrounddiag"
            android:textSize="@dimen/s90sp" />

        <com.media.vid.video_speed.utils.TextBlod
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Slow &amp; Fast  Motion"
            android:textColor="@color/backgrounddiag"
            android:textSize="@dimen/s26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/s50dp"
        android:layout_marginRight="@dimen/s50dp"
        android:layout_weight="2.7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s140dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/iv_videospeed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/myspeed_selector" />

                <com.media.vid.video_speed.utils.TextRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/video_motion"
                    android:textColor="@color/backgrounddiag"
                    android:textSize="@dimen/s20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/iv_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/myvideo_selector" />

                <com.media.vid.video_speed.utils.TextRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/videos"
                    android:textColor="@color/backgrounddiag"
                    android:textSize="@dimen/s20sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s140dp"
            android:layout_marginTop="@dimen/s40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/iv_capture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/mycapture_selector" />

                <com.media.vid.video_speed.utils.TextRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/capture_video"
                    android:textColor="@color/backgrounddiag"
                    android:textSize="@dimen/s20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rateapp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/myrate_selector" />

                <com.media.vid.video_speed.utils.TextRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rate"
                    android:textColor="@color/backgrounddiag"
                    android:textSize="@dimen/s20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
